# ChangeLog for net-analyzer/pchar
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/pchar/ChangeLog,v 1.3 2006/11/01 21:15:57 chutzpah Exp $

  01 Nov 2006; Patrick McLean <chutzpah@gentoo.org>
  +files/pchar-1.5-snmp.patch, pchar-1.5.ebuild:
  Re-add snmp USE flag (bug #152701). Thanks to Francisco Javier
  <ffelix@sshinf.com> for the patch.

  24 Mar 2006; Patrick McLean <chutzpah@gentoo.org> pchar-1.5.ebuild:
  Dropped snmp USE flag to fix bug #127389.

*pchar-1.5 (23 Mar 2006)

  23 Mar 2006; Patrick McLean <chutzpah@gentoo.org> +metadata.xml,
  +pchar-1.5.ebuild:
  Initial version.
