@@ -2,15 +2,15 @@ AUX pchar-1.5-snmp.patch 874 RMD160 4538e206dbc30612e5bf5406696c5f557048b2e1 SHA
 MD5 9783a650c9523f48822bc67ef1ff7099 files/pchar-1.5-snmp.patch 874
 RMD160 4538e206dbc30612e5bf5406696c5f557048b2e1 files/pchar-1.5-snmp.patch 874
 SHA256 3c67ac2ef21c7d503f28a5020baf763c9ca24f99d38b078bb5dcb3e8a3424f38 files/pchar-1.5-snmp.patch 874
-DIST pchar-1.5.tar.gz 117678 RMD160 b8e600b9c11cf7e584768c87aadeeb9d7b482949 SHA256 7019297084f1000557a019501532ecae67772851717329cc02227f5c17e36d27
-EBUILD pchar-1.5.ebuild 884 RMD160 659d86f4c7c3f57de6b10b1f42f350ddc07ece8e SHA1 d234e3722bae23baf5df0ac4a61b1f1ea262f0be SHA256 f6ba8409e275be8f97b2bb16745a2197c4f10b000ef54b9a040fd40ac00a9ccb
-MD5 301c34b9d5f86c55b1f6bf75d2ee4241 pchar-1.5.ebuild 884
-RMD160 659d86f4c7c3f57de6b10b1f42f350ddc07ece8e pchar-1.5.ebuild 884
-SHA256 f6ba8409e275be8f97b2bb16745a2197c4f10b000ef54b9a040fd40ac00a9ccb pchar-1.5.ebuild 884
-MISC ChangeLog 664 RMD160 91bb3abe28f14ea8d92814a9cbb3d60ea84fbaff SHA1 e28f69e2df24d22418b36927615355b68ee5c1bb SHA256 0fafd9a9490d951d8d62f6097d6bb61912559608bfbac3c934965c14a8c34629
-MD5 86ba617c1f36441005e2ce473fb9a008 ChangeLog 664
-RMD160 91bb3abe28f14ea8d92814a9cbb3d60ea84fbaff ChangeLog 664
-SHA256 0fafd9a9490d951d8d62f6097d6bb61912559608bfbac3c934965c14a8c34629 ChangeLog 664
+DIST pchar-1.5.tar.gz 117678 RMD160 b8e600b9c11cf7e584768c87aadeeb9d7b482949 SHA1 3e78505b881773d2a726b426c6023ee2519bed75 SHA256 7019297084f1000557a019501532ecae67772851717329cc02227f5c17e36d27
+EBUILD pchar-1.5.ebuild 928 RMD160 b5a3e5c0ecba96cf9f300df537f8a44ddfc680da SHA1 2059db189a1eb9708e7ea931db311938e22a40ab SHA256 62d5229f72da6d481a8cf58226cd59dbb1b8f64a02964f16db5e450384e694b2
+MD5 00c262a65ced22a1f64aac96bbff7f1f pchar-1.5.ebuild 928
+RMD160 b5a3e5c0ecba96cf9f300df537f8a44ddfc680da pchar-1.5.ebuild 928
+SHA256 62d5229f72da6d481a8cf58226cd59dbb1b8f64a02964f16db5e450384e694b2 pchar-1.5.ebuild 928
+MISC ChangeLog 813 RMD160 ecaf247d5bb48976abfbd54008cb5476acd76b3f SHA1 278d8bf3b5aa8d6e58ba07ced114f1093b0e53d6 SHA256 ac553ce6ac2472a6dd8920feef7375dca1b514732a767c82dff1c96a2a7aee5b
+MD5 66c842e65fda57373a8d9efb8a36e004 ChangeLog 813
+RMD160 ecaf247d5bb48976abfbd54008cb5476acd76b3f ChangeLog 813
+SHA256 ac553ce6ac2472a6dd8920feef7375dca1b514732a767c82dff1c96a2a7aee5b ChangeLog 813
 MISC metadata.xml 551 RMD160 0cfd8e20c889083622dbb25abf1bb13d6c6aa20d SHA1 b530829b723b1fb5aca73b37b6cd8561c009861a SHA256 240b5fd4a04e6605ef5b4a746483a41e186732348f0ede30a6f590d5dc009202
 MD5 e51ee72962d960c4006ab6fe7e27fd84 metadata.xml 551
 RMD160 0cfd8e20c889083622dbb25abf1bb13d6c6aa20d metadata.xml 551
